vuejs/vuejs-tests/testData/highlighting/pseudoSelectors.vue
<style lang="scss">
    div::v-deep::<error descr="Unknown pseudo selector 'v-incorrect'">v-incorrect</error> {}
</style  >